--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "product-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
